' *******************************************************************************
' Copyright (c) 2026 Contributors to the Eclipse Foundation
'
' See the NOTICE file(s) distributed with this work for additional
' information regarding copyright ownership.
'
' This program and the accompanying materials are made available under the
' terms of the Apache License Version 2.0 which is available at
' https://www.apache.org/licenses/LICENSE-2.0
'
' SPDX-License-Identifier: Apache-2.0
' *******************************************************************************

@startuml verification_machine_class_diagram

title VerificationMachine: Class Diagram

legend top left
    |= Color         |= Description          |
    | <#Beige>       | Base classes          |
    | <#Lavender>    | VerificationMachine   |
endlegend

class "PtpTimeInfo" as time_info #Beige {
    +ptp: uint64
    +local_time: uint64
    +status: int
}

abstract class "BaseMachine" as base_machine #Beige {
    +GetName(): string
    +Init(): bool
}

abstract class "ReactiveMachine" as reactive_machine #Beige {
}

abstract class "Consumer<T>" as consumer #Beige {
    +OnMessage(data: T): void
}

abstract class "Producer<T>" as producer #Beige {
    +SetPublishCallback(callback): void
    #Publish(data: T): void
}

class "VerificationMachine<DataType>" as verification_machine #Lavender {
    -pipeline_: vector<VerificationStage*>
    -publish_callback_: function
    +OnMessage(data: DataType): void
    +SetPublishCallback(callback): void
}

abstract class "VerificationStage<DataType>" as verification_stage #Lavender {
    -next_stage_: VerificationStage*
    +Process(data: DataType): DataType
    +SetNext(next: VerificationStage*): void
    #DoValidation(data: DataType&): void
}

class "SynchronizationValidator" as sync_validator #Lavender {
    #DoValidation(data: PtpTimeInfo&): void
}

class "TimeoutValidator" as timeout_validator #Lavender {
    #DoValidation(data: PtpTimeInfo&): void
}

class "TimeJumpsValidator" as timejump_validator #Lavender {
    #DoValidation(data: PtpTimeInfo&): void
}

base_machine <|-- reactive_machine
reactive_machine <|-- verification_machine
consumer <|.. verification_machine
producer <|.. verification_machine

verification_machine *-- verification_stage : pipeline
verification_stage <|-- sync_validator
verification_stage <|-- timeout_validator
verification_stage <|-- timejump_validator
verification_stage o-- verification_stage : next_stage_

verification_machine --> time_info : processes

@enduml
